--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,17 @@
 	
 	<body>
 		
-		<%- body %>
+		<header>
+			<h1>JSnow!</h1>
+		</header>
+		
+		<div id="main" role="main">
+			<<- body >>
+		</div>
+		
+		<footer>
+		</footer>
+
 		
 	</body>
 </html>
