--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,3 @@
 <<-
-	partial('_hill', [
-		{
-			name: "Auron",
-			mark: 3.4,
-			runs: {
-				green: {
-					open: 4,
-					total: 5
-				},
-				blue: {
-					open: 8,
-					total: 9
-				},
-				red: {
-					open: 7,
-					total: 10
-				},
-				black: {
-					open: 2,
-					total: 3
-				}
-			}
-		}
-	])
+	partial('_hill', hills)
 >>
