--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,4 @@
-<header>
-	<h1>JSnow! Login</h1>
-</header>
-
-<% if (!everyauth.loggedIn) { %>
+<< if (!everyauth.loggedIn) { >>
 </p>
   <form action="/login" method="post">
     <label for="everyauth.password.loginFormFieldName">Login</label>
@@ -16,7 +12,7 @@
   
 <a href='/'>Go back home</a>
 </p>
-<% } // else find a way to redirect %>
+<< } // else find a way to redirect >>
 
 <footer>
 </footer>
