--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,4 @@
-<header>
-	<h1>JSnow! Register</h1>
-</header>
-
-<% if (!everyauth.loggedIn) {%>
+<< if (!everyauth.loggedIn) {>>
 <h2>Register</h2>
 </p>
   <form action="/register" method="post">
@@ -23,7 +19,7 @@
   
 <a href='/'>Go back home</a>
 </p>
-<% } // else find a way to redirect %>
+<< } // else find a way to redirect >>
 
 <footer>
 </footer>
