--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,18 +1,19 @@
 <!doctype html>  
 <html lang="en-EN">
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<link rel="stylesheet"  href="/stylesheets/style.css" />
 	
 		<title>Where to go skiing today? — JSnow!</title>
-		<meta name="author" content="Matti Schneider-Ghibaudo">
-		<meta name="author" content="Jérémy Gabriele">
+		<meta name="author" content="Matti Schneider-Ghibaudo" />
+		<meta name="author" content="Jérémy Gabriele" />
 	</head>
 	
 	<body>
 		
 		<header>
-			<h1>JSnow!</h1>
+			<h1 id="banner">JSnow!</h1>
 		</header>
 		
 		<div id="main" role="main">
