--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -8,7 +8,7 @@
 	<<}>>
 	</ul>
 </p>
-  <form action="/register" method="post">
+  <form action="/users/register" method="post">
     <label for="<<= everyauth.password.loginFormFieldName >>">Login</label>
     <input type="text" name="<<= everyauth.password.loginFormFieldName >>" />
     <br />
