hill model created and linked * /hill/* match with database now, not mockup * /hill/new create a hill * need to check hill models (default values or not, etc...)

--- a/views/hills/new.ejs
+++ b/views/hills/new.ejs
@@ -5,20 +5,20 @@
     <label for="name">Hill name</label>
     <input type="text" name="name" />
     <br />
-    <label for="runs.green.total">Number of green runs</label>
-    <input type="text" name="runs.green.total" />
+    <label for="greenRunsTotal">Number of green runs</label>
+    <input type="text" name="greenRunsTotal" />
     <br />
-    <label for="runs.blue.total">Number of blue runs</label>
-    <input type="text" name="runs.blue.total" />
+    <label for="blueRunsTotal">Number of blue runs</label>
+    <input type="text" name="blueRunsTotal" />
     <br />
-    <label for="runs.red.total">Number of red runs</label>
-    <input type="text" name="runs.red.total" />
+    <label for="redRunsTotal">Number of red runs</label>
+    <input type="text" name="redRunsTotal" />
     <br />
-    <label for="runs.black.total">Number of black runs</label>
-    <input type="text" name="runs.black.total" />
+    <label for="blackRunsTotal">Number of black runs</label>
+    <input type="text" name="blackRunsTotal" />
     <br />
-    <label for="lifts.total">Total lifts</label>
-    <input type="text" name="lifts.total" />
+    <label for="totalLifts">Total lifts</label>
+    <input type="text" name="totalLifts" />
     <br />
     <input type="submit" value="Create hill" />
   </form>
