--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,18 @@
 
 /****** TAG ******/
 
+[required]
+{
+	border-color: #88a;
+	-webkit-box-shadow: 0 0 3px rgba(0, 0, 255, .5);
+}
+
+:invalid
+{
+	border-color: #e88;
+	-webkit-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
+}
+
 a
 {
   color: lightblue;
