cleaner code for new hill (controller mainly)

--- a/views/hills/new.ejs
+++ b/views/hills/new.ejs
@@ -6,19 +6,19 @@
     <input type="text" name="name" required />
     <br />
     <label for="greenRunsTotal">Number of green runs</label>
-    <input type="number" step="1" min="0" value="0" name="greenRunsTotal" />
+    <input type="number" step="1" min="0" value="0" name="runs.green.total" />
     <br />
     <label for="blueRunsTotal">Number of blue runs</label>
-    <input type="number" step="1" min="0" value="0" name="blueRunsTotal" />
+    <input type="number" step="1" min="0" value="0" name="runs.blue.total" />
     <br />
     <label for="redRunsTotal">Number of red runs</label>
-    <input type="number" step="1" min="0" value="0" name="redRunsTotal" />
+    <input type="number" step="1" min="0" value="0" name="runs.red.total" />
     <br />
     <label for="blackRunsTotal">Number of black runs</label>
-    <input type="number" step="1" min="0" value="0" name="blackRunsTotal" />
+    <input type="number" step="1" min="0" value="0" name="runs.black.total" />
     <br />
     <label for="totalLifts">Total lifts</label>
-    <input type="number" step="1" min="0" value="0" name="totalLifts" />
+    <input type="number" step="1" min="0" value="0" name="lifts.total" />
     <br />
     <input type="submit" value="Create hill" />
   </form>
