--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -3,18 +3,19 @@
 	<p>
 		<span class="mark"><<= hill.mark >></span> -
 		<span class="snow_type"><<= hill.snowType >></span>. 
-		Last update on <<= hill.lastUpdate >> (need to parse)
+		Dernière mise à jour le << var d = hill.lastUpdate >>
+		<<= d.getDate() >>/<<= d.getMonth() >>/<<= d.getFullYear() >>
 	</p>
 	
-	<h3 class="info_title">General info</h3>
+	<h3 class="info_title">Informations générales</h3>
 	<p>
-		Snow cover (top/bottom) : <<= hill.snowCover.top >> / <<= hill.snowCover.bottom >>
+		Hauteur de neige (haut/bas) : <<= hill.snowCover.top >> / <<= hill.snowCover.bottom >>
 	</p>
 	<p>
-		Lifts (opened/total) : <<= hill.lifts.open >> / <<= hill.lifts.total >>
+		Remonte-piste (ouverts/total) : <<= hill.lifts.open >> / <<= hill.lifts.total >>
 	</p>
 	
-	<h3 class="info_title">Open runs</h3>
+	<h3 class="info_title">Pistes ouvertes</h3>
 	<ol class="runs">
 		<li class="green"><<= hill.runs.green.open >> / <<= hill.runs.green.total >></li>
 		<li class="blue"><<= hill.runs.blue.open >> / <<= hill.runs.blue.total >></li>
@@ -22,14 +23,15 @@
 		<li class="black"><<= hill.runs.black.open >> / <<= hill.runs.black.total >></li>
 	</ol>
 	
-	<h3 class="info_title">What they say :</h3>	
+	<h3 class="info_title">Ce qu'ils en disent :</h3>
 	<<hill.comments.each(function(com) {>>
 	<article class="comment">
 		<p>
-			userID: <span class="user_name"><<= com.userID >></span> ->
 			<span class="mark"><<= com.mark>></span>
+			<span class="user_name"><<= com.userID >></span> dit :
 		</p>
 		<p class="content"><<= com.content >></p>
 	</article>
 	<<});>>
+	<a href="/comments/new">Ajouter un commentaire</a>
 </article>
