--- a/views/hills/new.ejs
+++ b/views/hills/new.ejs
@@ -1,27 +1,27 @@
 
-<h2>New hill</h2>
+<h2>Ajouter une station</h2>
 </p>
   <form action="/hills/new" method="post">
-    <label for="name">Hill name</label>
+    <label for="name">Nom</label>
     <input type="text" name="name" required />
     <br />
-    <label for="greenRunsTotal">Number of green runs</label>
+    <label for="runs.green.total">Nombre total de pistes vertes</label>
     <input type="number" step="1" min="0" value="0" name="runs.green.total" />
     <br />
-    <label for="blueRunsTotal">Number of blue runs</label>
+    <label for="runs.blue.total">Nombre total de pistes bleues</label>
     <input type="number" step="1" min="0" value="0" name="runs.blue.total" />
     <br />
-    <label for="redRunsTotal">Number of red runs</label>
+    <label for="runs.red.total">Nombre total de pistes rouges</label>
     <input type="number" step="1" min="0" value="0" name="runs.red.total" />
     <br />
-    <label for="blackRunsTotal">Number of black runs</label>
+    <label for="runs.black.total">Nombre total de pistes noires</label>
     <input type="number" step="1" min="0" value="0" name="runs.black.total" />
     <br />
-    <label for="totalLifts">Total lifts</label>
+    <label for="lifts.total">Nombre total de remontées</label>
     <input type="number" step="1" min="0" value="0" name="lifts.total" />
     <br />
-    <input type="submit" value="Create hill" />
+    <input type="submit" value="Ajouter" />
   </form>
   
-  <a href='/'>Go back home</a>
+  <a href='/'>Retour à l'accueil</a>
 </p>
