--- a/views/hills/update.ejs
+++ b/views/hills/update.ejs
@@ -24,5 +24,5 @@
     <input type="submit" value="Mettre à jour" />
   </form>
   
-  <a href='/'>Go back home</a>
+  <a href='/'>Retour à l'accueil</a>
 </p>
