we can post comment on hill status * at /hills/:name/comment

--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -33,5 +33,5 @@
 		<p class="content"><<= com.content >></p>
 	</article>
 	<<});>>
-	<a href="/comments/new">Ajouter un commentaire</a>
+	<a href="/hills/<<= hill.name >>/comment">Ajouter un commentaire</a>
 </article>
