small fixes * changed update view to update "open" value and not "total" * mark is over 4 and not over 5. Changed populate also to match. * add /home route as / (routes.js and user login/register success fallback) * name.first renamed as firstName (couldn't access values of "not flat" object) * no default values when create a new hill * deleted mockup * removed useless log

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 <h2>Hey !</h2>
 <p>
 	Vous pouvez jeter un oeil aux
-  <a href='/users/register'>stations</a> (todo)
+  <a href='/hills'>stations</a>
   et partager votre point de vue !
   <br>
 </p>
