--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -16,11 +16,11 @@
     <label for="<<= everyauth.password.passwordFormFieldName >>">Mot de passe</label>
     <input type="password" name="<<= everyauth.password.passwordFormFieldName >>" />
     <br />
-    <label for="name.first">Prénom</label>
-    <input type="text" name="name.first" />
+    <label for="firstName">Prénom</label>
+    <input type="text" name="firstName" />
     <br />
-    <label for="name.last">Nom</label>
-    <input type="text" name="name.last" />
+    <label for="lastName">Nom</label>
+    <input type="text" name="lastName" />
     <br />
     <input type="submit" value="Créer un compte" />
   </form>
