comments modifications * comment.js created. comment.userID -> comment.who * display name or Anonymous for comments * populate.js updated * useless style padding added * possible not to post mark (checkbox)
+some more express-messages flash added
+link to /hill added at /home

--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -30,8 +30,8 @@
 	<<hill.comments.each(function(com) {>>
 	<article class="comment">
 		<p>
-			<span class="mark"><<= com.mark>></span>
-			<span class="user_name"><<= com.userID >></span> dit :
+			<span class="mark"><<= com.mark || "" >></span>
+			<span class="user_name"><<= com.who || "Anonymous" >></span> dit :
 		</p>
 		<p class="content"><<= com.content >></p>
 	</article>
