--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,10 @@
   <a href='/users/register'>S'enregistrer</a>
   <br>
   <a href='/users/login'>Connexion</a>
+  <br>
+  Vous pouvez aussi jeter un oeil aux
+  <a href='/hills'>stations</a>
+  et partager votre point de vue !
 </p>
 
 << } else { >>
