--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,6 +99,7 @@ ol
 	border: 1px dashed red;
 	color: red;
 	list-style-type: none;
+	padding: 1em;
 	width: 40%;
 }
 
@@ -107,6 +108,7 @@ ol
 	border: 1px dashed red;
 	color: blue;
 	list-style-type: none;
+	padding: 1em;
 	width: 40%;
 }
 
