--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,13 +2,13 @@
 <h2>Ajouter un commentaire</h2>
 </p>
   <form action="/hills/<<= hill.name>>/comment" method="post">
-    <label for="title">Titre</label>
-    <input type="text" name="title"/>
-    <br />
     <textarea name="content"></textarea>
     <br />
     <label for="mark">Note</label>
     <input type="number" step="0.5" min="0" max="4" value="0" name="mark" />
+    <br />
+    <label for="donotmark">Je ne veux pas donner de note</label>
+    <input type="checkbox" name="donotmark" />
     <br />
     
 		<input type="submit" value="Ajouter" />
