--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,13 +1,12 @@
 << if (!everyauth.loggedIn) { >>
 <h2>Se connecter</h2>
 	<< if  ('undefined' !== typeof errors && errors.length) {>>
-	<p>Erreurs (en anglais, parce que ça fait tellement plus dramatique) :</p>
 	<ul>
 	  << for (var i=0; i<errors.length; i++) {>>
-	  <li><<= errors[i] >></li>
+	  <li class="error"><<= errors[i] >></li>
 	  <<}>>
+	</ul>
 	<<}>>
-</ul>
 </p>
   <form action="/users/login" method="post">
     <label for="<<= everyauth.password.loginFormFieldName >>">Identifiant</label>
