--- a/views/hills/view.ejs
+++ b/views/hills/view.ejs
@@ -1,3 +1,7 @@
+<<if (everyauth.loggedIn && (everyauth.user.skimaster=='on')) {>>
+	<a href="/hills/new">Ajouter une nouvelle station</a>
+<<}>>
+
 <<-
 	partial('hills/_hill', hills)
 >>
