--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -1,13 +1,12 @@
 <article class="hill">
 	<h2 class="hill_name"><<= hill.name >></h2>
-	<<if (everyauth.loggedIn) {>>
+	<<if (everyauth.loggedIn && (everyauth.user.skimaster=='on')) {>>
 	<a href="/hills/update/<<= hill.name >>">Éditer</a>
 	<<}>>
 	<p>
-		<span class="mark"><<= hill.mark >></span> -
-		<span class="snow_type"><<= hill.snowType >></span>. 
+		Note moyenne : <span class="mark"><<= hill.mark >></span>
 		Dernière mise à jour le << var d = hill.lastUpdate >>
-		<<= d.getDate() >>/<<= d.getMonth() >>/<<= d.getFullYear() >>
+		<<= (d.getDate()<10)? "0"+d.getDate():d.getDate() >>/<<= (d.getMonth()<10)? "0"+d.getMonth():d.getMonth() >>/<<= d.getFullYear() >>
 	</p>
 	
 	<h3 class="info_title">Informations générales</h3>
