checkboxes for snow type * hard-coded (couldn't make enum work with arrays) but checked server-side
+ express-messages flash added

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -10,6 +10,12 @@
     <label for="donotmark">Je ne veux pas donner de note</label>
     <input type="checkbox" name="donotmark" />
     <br />
+    <label>Type de neige : </label>
+    <input type="checkbox" name="rocailleuse">rocailleuse</input>
+    <input type="checkbox" name="poudreuse">poudreuse</input>
+    <input type="checkbox" name="artificielle">artificielle</input>
+    <input type="checkbox" name="dure">dure</input>
+    <input type="checkbox" name="soupe">soupe</input>
     
 		<input type="submit" value="Ajouter" />
   </form>
