--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -9,7 +9,7 @@
 	<<}>>
 </p>
   <form action="/users/register" method="post">
-    <label for="<<= everyauth.password.loginFormFieldName >>">Identifiant</label>
+    <label for="<<= everyauth.password.loginFormFieldName >>">Email</label>
     <input type="text" name="<<= everyauth.password.loginFormFieldName >>" />
     <br />
     <label for="<<= everyauth.password.passwordFormFieldName >>">Mot de passe</label>
