--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -1,4 +1,4 @@
-<article class="hill">
+<article class="hill" id="<<= hill.name >>">
 	<h2 class="hill_name"><<= hill.name >></h2>
 	<<if (everyauth.loggedIn && (everyauth.user.skimaster=='on')) {>>
 	<a href="/hills/update/<<= hill.name >>">Éditer</a>
