--- a/views/hills/_hill.ejs
+++ b/views/hills/_hill.ejs
@@ -4,7 +4,7 @@
 	<a href="/hills/update/<<= hill.name >>">Éditer</a>
 	<<}>>
 	<p>
-		Note moyenne : <span class="mark"><<= hill.mark >></span>
+		<span class="mark"><<= hill.mark ? "Note moyenne : " + hill.mark : '' >></span>
 		Dernière mise à jour le
 		<<
 			var d = hill.lastUpdate;
