--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link rel="stylesheet"  href="/stylesheets/style.css" />
+		<link rel="stylesheet"  href="/stylesheets/jsnow.css" />
+		<link rel="stylesheet"  href="/stylesheets/hill.css" />
+		<link rel="stylesheet"  href="/stylesheets/comment.css" />
 	
 		<title>Where to go skiing today? — JSnow!</title>
 		<meta name="author" content="Matti Schneider-Ghibaudo" />
@@ -14,6 +16,19 @@
 		
 		<header>
 			<h1 id="banner">JSnow!</h1>
+			
+			<div id="login">
+				<< if (everyauth.loggedIn) {>>
+					<<= user.firstName >> <<= user.lastName >>
+					<<if (everyauth.user.skimaster=='on') {>>
+						<a href="/hills/new">Ajouter une nouvelle station</a>
+					<<}>>
+					<a href='/logout'>Se déconnecter</a>
+				<<} else {>>
+					Vous n'êtes pas connecté… <a href='/users/login'>Connectez-vous</a>
+					<a href='/users/register'>Inscrivez-vous</a>
+				<<}>>			
+			</div>
 		</header>
 		
 		<<- messages() >>
@@ -23,16 +38,6 @@
 		</div>
 		
 		<footer>
-		  << if (everyauth.loggedIn) {>>
-		  <p>
-				Vous êtes connecté en tant que <<= user.firstName >> <<= user.lastName >>.
-				<a href='/logout'>Se déconnecter</a>.
-			</p>
-		  <<} else {>>
-			<p>
-				Vous n'êtes pas connecté... <a href='/users/login'>Connectez-vous</a> ou <a href='/users/register'>Inscrivez-vous</a> !
-			</p>
-			<<}>>
 		</footer>
 
 		<script src="/js/mootools-core-1.4.4.js"></script>
