Added spellcheck to comments.

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,7 +2,7 @@
 <h2>Comment est <<= hill.name>> aujourd'hui ?</h2>
 <form action="/hills/<<= hill.name>>/comment" method="post">
 	<h3>Commentaire</h3>
-	<textarea name="content"></textarea>
+	<textarea name="content" spellcheck="true"></textarea>
 	
 	<h3><label for="mark">Note</label></h3>
 	<select name="mark" id="mark">
