--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		
 		<link rel="stylesheet"  href="/stylesheets/jsnow.css" />
 		<link rel="stylesheet"  href="/stylesheets/hill.css" />
 		<link rel="stylesheet"  href="/stylesheets/comment.css" />
