--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
 	<body>
 		
 		<header>
-			<h1 id="banner">JSnow!</h1>
+			<h1 id="banner">JSn❄w!</h1>
 			
 			<div id="login">
 				<< if (everyauth.loggedIn) {>>
