Uniformed brackets spacing and commented CSS.

--- a/public/stylesheets/comment.css
+++ b/public/stylesheets/comment.css
@@ -1,5 +1,9 @@
-.comment
-{
+/** View for a JSnow comment.
+*
+*@author	Matti Schneider-Ghibaudo
+*/
+
+.comment {
 	border: 3px solid #888;
 	padding: 1em;
 }
