--- a/public/stylesheets/hill.css
+++ b/public/stylesheets/hill.css
@@ -1,3 +1,8 @@
+/** View for a JSnow hill.
+*
+*@author	Matti Schneider-Ghibaudo
+*/
+
 /*** HILL LAYOUT ***/
 
 .hill {
@@ -68,13 +73,11 @@
 	top: .6em;
 }
 
-.mark
-{
+.mark {
 	font-weight: bold;
 }
 
-.snow_type
-{
+.snow_type {
 	font-weight: bold;
 }
 
@@ -84,28 +87,23 @@ meter {
 
 /*** RUNS ***/
 
-ol
-{
+ol {
 	list-style-type: asterisks;
 }
 
-.green
-{
+.green {
 	color: green;
 }
 
-.blue
-{
+.blue {
 	color: blue;
 }
 
-.red
-{
+.red {
 	color: red;
 }
 
-.black
-{
+.black {
 	color: #000;
 }
 
